code/python/OFDB/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# OFDB client library for Python

[![PyPi](https://img.shields.io/pypi/v/fds.sdk.OFDB)](https://pypi.org/project/fds.sdk.OFDB/)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

OFDB api

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.0
- Package version: 0.21.8
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.OFDB==0.21.8
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.OFDB==0.21.8
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.OFDB
from fds.sdk.OFDB.api import create_api
from fds.sdk.OFDB.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.OFDB.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.OFDB.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.OFDB.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = create_api.CreateApi(api_client)
    # NOTE: The parameter variable defined below is just an example and may potentially contain non valid values. So please replace this with valid values.
    path = "path_example" # str | Encode database path
    # NOTE: The parameter variable defined below is just an example and may potentially contain non valid values. So please replace this with valid values.
    add_symbol_date = AddSymbolDate(
        date="20220202",
        data=[
            AddSymbolDateData(
                field_1="field_1_example",
                field_2=1,
            ),
        ],
    ) # AddSymbolDate | Required data for creating date in the database. At least one iterative field is required otherwise it will throw 400.

    try:
        # example passing only required values which don't have defaults set
        api_response = api_instance.add_symbol_date(path, add_symbol_date)

        pprint(api_response)
    except fds.sdk.OFDB.ApiException as e:
        print("Exception when calling CreateApi->add_symbol_date: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     api_response, http_status_code, response_headers = api_instance.add_symbol_date_with_http_info(path, add_symbol_date)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.OFDB.ApiException as e:
    #     print("Exception when calling CreateApi->add_symbol_date: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     async_result = api_instance.add_symbol_date_async(path, add_symbol_date)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.OFDB.ApiException as e:
    #     print("Exception when calling CreateApi->add_symbol_date: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     async_result = api_instance.add_symbol_date_with_http_info_async(path, add_symbol_date)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.OFDB.ApiException as e:
    #     print("Exception when calling CreateApi->add_symbol_date: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.OFDB

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.OFDB.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.OFDB

configuration = fds.sdk.OFDB.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.OFDB

configuration = fds.sdk.OFDB.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/ofdb*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CreateApi* | [**add_symbol_date**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/CreateApi.md#add_symbol_date) | **POST** /v1/database/{path}/dates | 
*CreateApi* | [**add_symbol_date3_d**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/CreateApi.md#add_symbol_date3_d) | **POST** /v1/database/{path}/dates/{date}/symbols | 
*CreateApi* | [**add_symbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/CreateApi.md#add_symbols) | **POST** /v1/database/{path}/symbols | 
*CreateApi* | [**create_database**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/CreateApi.md#create_database) | **POST** /v1/database/ | 
*ModifyApi* | [**delete_dates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ModifyApi.md#delete_dates) | **DELETE** /v1/database/{path}/dates/{date} | 
*ModifyApi* | [**delete_symbol_date3_d**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ModifyApi.md#delete_symbol_date3_d) | **DELETE** /v1/database/{path}/dates/{date}/symbols/{symbol} | 
*ModifyApi* | [**delete_symbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ModifyApi.md#delete_symbols) | **DELETE** /v1/database/{path}/symbols/{symbol} | 
*ModifyApi* | [**update_symbol_date**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ModifyApi.md#update_symbol_date) | **PUT** /v1/database/{path}/dates/{date} | 
*ModifyApi* | [**update_symbol_date3_d**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ModifyApi.md#update_symbol_date3_d) | **PUT** /v1/database/{path}/dates/{date}/symbols/{symbol} | 
*ModifyApi* | [**update_symbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ModifyApi.md#update_symbols) | **PUT** /v1/database/{path}/symbols/{symbol} | 
*ViewApi* | [**get_database**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ViewApi.md#get_database) | **GET** /v1/database/{path} | 
*ViewApi* | [**get_dates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ViewApi.md#get_dates) | **GET** /v1/database/{path}/dates | 
*ViewApi* | [**get_fields**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ViewApi.md#get_fields) | **GET** /v1/database/{path}/fields | 
*ViewApi* | [**get_symbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/ViewApi.md#get_symbols) | **GET** /v1/database/{path}/symbols | 


## Documentation For Models

 - [AddDatabase](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/AddDatabase.md)
 - [AddSymbolDate](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/AddSymbolDate.md)
 - [AddSymbolDate3D](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/AddSymbolDate3D.md)
 - [AddSymbolDate3DData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/AddSymbolDate3DData.md)
 - [AddSymbolDateData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/AddSymbolDateData.md)
 - [AddSymbols](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/AddSymbols.md)
 - [AddSymbolsData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/AddSymbolsData.md)
 - [DatabaseSchema](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/DatabaseSchema.md)
 - [Dates](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/Dates.md)
 - [Fields](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/Fields.md)
 - [InlineResponse202](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse202.md)
 - [InlineResponse400](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse400.md)
 - [InlineResponse400Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse400Errors.md)
 - [InlineResponse400Source](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse400Source.md)
 - [InlineResponse403](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse403.md)
 - [InlineResponse403Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse403Errors.md)
 - [InlineResponse404](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse404.md)
 - [InlineResponse404Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse404Errors.md)
 - [InlineResponse413](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse413.md)
 - [InlineResponse413Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse413Errors.md)
 - [InlineResponse429](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse429.md)
 - [InlineResponse429Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/InlineResponse429Errors.md)
 - [SuccessPostResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/SuccessPostResponse.md)
 - [Symbols](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/Symbols.md)
 - [UpdateSymbolDate](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/UpdateSymbolDate.md)
 - [UpdateSymbolDate3D](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/UpdateSymbolDate3D.md)
 - [UpdateSymbolDate3DData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/UpdateSymbolDate3DData.md)
 - [UpdateSymbols](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/UpdateSymbols.md)
 - [UpdateSymbolsData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/OFDB/v1/docs/UpdateSymbolsData.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.OFDB.apis and fds.sdk.OFDB.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.OFDB.api.default_api import DefaultApi`
- `from fds.sdk.OFDB.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.OFDB
from fds.sdk.OFDB.apis import *
from fds.sdk.OFDB.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

